package pattern_examples.facade_pattern_example;

public class Main {
    public static void main(String[] args) {
        Computer computer = new Computer();
        computer.copy();
    }
}
