package pattern_examples.facade_pattern_example;

public class Power {
    public void on(){
        System.out.println("включение питания");
    }
    public void off(){
        System.out.println("выключение питания");
    }
}
