@startuml

title __FACADE_PATTERN_EXAMPLE's Class Diagram__\n

  namespace pattern_examples.facade_pattern_example {
    class pattern_examples.facade_pattern_example.Computer {
        + copy()
    }
  }
  

  namespace pattern_examples.facade_pattern_example {
    class pattern_examples.facade_pattern_example.DVDRom {
        - hasData : boolean
        + hasData()
        + load()
        + unload()
    }
  }
  

  namespace pattern_examples.facade_pattern_example {
    class pattern_examples.facade_pattern_example.HDD {
        + copyFromDVD()
    }
  }
  

  namespace pattern_examples.facade_pattern_example {
    class pattern_examples.facade_pattern_example.Main {
        {static} + main()
    }
  }
  

  namespace pattern_examples.facade_pattern_example {
    class pattern_examples.facade_pattern_example.Power {
        + off()
        + on()
    }
  }
  

  pattern_examples.facade_pattern_example.Computer o-- pattern_examples.facade_pattern_example.DVDRom : dvdRom
  pattern_examples.facade_pattern_example.Computer o-- pattern_examples.facade_pattern_example.HDD : hdd
  pattern_examples.facade_pattern_example.Computer o-- pattern_examples.facade_pattern_example.Power : power


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
